Added docker compose file + Corrected docker files

--- a/api/ContainerLabs1.Api/Dockerfile
+++ b/api/ContainerLabs1.Api/Dockerfile
@@ -7,10 +7,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["api/ContainerLabs1.Api/ContainerLabs1.Api.csproj", "api/ContainerLabs1.Api/"]
-RUN dotnet restore "api/ContainerLabs1.Api/ContainerLabs1.Api.csproj"
+COPY ["ContainerLabs1.Api.csproj", "ContainerLabs1.Api/"]
+RUN dotnet restore "ContainerLabs1.Api/ContainerLabs1.Api.csproj"
 COPY . .
-WORKDIR "/src/api/ContainerLabs1.Api"
+WORKDIR "/src/ContainerLabs1.Api"
 RUN dotnet build "ContainerLabs1.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
