--- a/api/ContainerLabs1.Api/Dockerfile
+++ b/api/ContainerLabs1.Api/Dockerfile
@@ -9,7 +9,7 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["ContainerLabs1.Api.csproj", "ContainerLabs1.Api/"]
 RUN dotnet restore "ContainerLabs1.Api/ContainerLabs1.Api.csproj"
-COPY . .
+COPY [".", "ContainerLabs1.Api/"]
 WORKDIR "/src/ContainerLabs1.Api"
 RUN dotnet build "ContainerLabs1.Api.csproj" -c Release -o /app/build
 
