--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 version: "3.9"
 services:
   db:
-    image: mariadb:latest
+    build: ./mariadb
     restart: always
     ports:
       - 3306:3306
     volumes:
       - db-data:/var/lib/mysql
     environment:
-      - MYSQL_DATABASE=test
-      - MARIADB_ROOT_PASSWORD=example
+      - MARIADB_ALLOW_EMPTY_ROOT_PASSWORD=yes
 
   api:
     build: ./api/ContainerLabs1.Api
