--- a/api/ContainerLabs1.Api/appsettings.Development.json
+++ b/api/ContainerLabs1.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ApiContextMySql": "server=localhost;user=root;password=;database=db_api"
+    "ApiContextMySql": "server=db;user=root;password=;database=db_api"
   }
 }
