--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,22 @@ services:
       retries: 5
       start_period: 30s
 
+  minio:
+    hostname: minio
+    image: quay.io/minio/minio:RELEASE.2022-11-11T03-44-20Z
+    command: server --console-address ":9001" http://minio/data{1...2}
+    expose:
+      - "9000"
+      - "9001"
+    volumes:
+      - minio-data-1:/data1
+      - minio-data-2:/data2
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
   api:
     build: ./api/ContainerLabs1.Api
     depends_on:
@@ -29,10 +45,14 @@ services:
   proxy:
     build: ./proxy
     ports:
-      - 9000:80
+      - 9002:80
+      - 9000:9000
+      - 9001:9001
     depends_on:
       - api
       - app
 
 volumes:
   db-data:
+  minio-data-1:
+  minio-data-2:
